RESOLVED FIXED77022
Remote web inspector reentrancy fixes
https://bugs.webkit.org/show_bug.cgi?id=77022
Summary Remote web inspector reentrancy fixes
Leo Franchi
Reported 2012-01-25 10:01:51 PST
Remote web inspector reentrancy fixes
Attachments
Patch (2.38 KB, patch)
2012-01-25 10:02 PST, Leo Franchi
no flags
Leo Franchi
Comment 1 2012-01-25 10:02:26 PST
Leo Franchi
Comment 2 2012-01-25 10:03:47 PST
The direct connection caused the tcp socket to no longer accept incoming events when waiting on a breakpoint.
Jocelyn Turcotte
Comment 3 2012-01-25 10:10:51 PST
It looks fine to me. Kenneth, could you have a look too?
Joseph Pecoraro
Comment 4 2012-01-25 11:35:22 PST
Comment on attachment 123965 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=123965&action=review > Source/WebKit/qt/WebCoreSupport/InspectorServerQt.cpp:364 > #if ENABLE(INSPECTOR) A separate issue, but maybe the whole file/class should be in this enable. The InspectorServer would be pretty useless without ENABLE(INSPECTOR) =) r=me, this patch looks good to me.
Jesus Sanchez-Palencia
Comment 5 2012-02-08 05:47:59 PST
cq+ as requested by Leo Franchi on IRC.
WebKit Review Bot
Comment 6 2012-02-08 07:11:53 PST
Comment on attachment 123965 [details] Patch Clearing flags on attachment: 123965 Committed r107085: <http://trac.webkit.org/changeset/107085>
WebKit Review Bot
Comment 7 2012-02-08 07:11:57 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.