Remote web inspector reentrancy fixes https://bugs.webkit.org/show_bug.cgi?id=77022

Patch by Leo Franchi <lfranchi@kde.org> on 2012-02-08
Reviewed by Joseph Pecoraro.

* WebCoreSupport/InspectorServerQt.cpp:
(WebCore::InspectorServerRequestHandlerQt::tcpReadyRead):
(WebCore::InspectorServerRequestHandlerQt::webSocketReadyRead):

git-svn-id: svn://svn.chromium.org/blink/trunk@107085 bbb929c8-8fbe-4397-9dbb-9b2b20218538